--- a/app.yaml
+++ b/app.yaml
@@ -5,8 +5,9 @@ api_version: 1
 
 builtins:
 - remote_api: on
-- datastore_admin: on
-- appstats: on
+
+inbound_services:
+- warmup
 
 handlers:
 - url: /_ah/queue/deferred
@@ -19,12 +20,3 @@ handlers:
 - url: /.*
   script: djangoappengine/main/main.py
   secure: always
-
-skip_files:
-- ^(.*/)?app\.yaml
-- ^(.*/)?cron\.yaml
-- ^(.*/)?index\.yaml
-- ^(.*/)?queue\.yaml
-- ^(.*/)?.*~
-- ^(.*/)?.*\.py[co]
-- ^(.*/)?\..*
