--- a/cron.yaml
+++ b/cron.yaml
@@ -1,11 +1,7 @@
 cron:
-- description: update calendars
-  url: /cron/calendar/start/
-  schedule: every 2 hours synchronized
-
-- description: parse websites
-  url: /cron/website/start/
-  schedule: every 2 hours synchronized
+- description: start worker
+  url: /cron/worker/start/
+  schedule: every 1 hours synchronized
 
 - description: keep alive
   url: /
