Moved googledata into submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "yamlcss"]
 	path = yamlcss
 	url = git@github.com:mback2k/django-yamlcss.git
+[submodule "googledata"]
+	path = googledata
+	url = git@github.com:mback2k/django-googledata.git
