Switched to public submodule repositories

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "googleauth"]
 	path = googleauth
-	url = git@github.com:mback2k/django-googleauth.git
+	url = https://github.com/mback2k/django-googleauth.git
 [submodule "yamlcss"]
 	path = yamlcss
-	url = git@github.com:mback2k/django-yamlcss.git
+	url = https://github.com/mback2k/django-yamlcss.git
 [submodule "googledata"]
 	path = googledata
-	url = git@github.com:mback2k/django-googledata.git
+	url = https://github.com/mback2k/django-googledata.git
 [submodule "jdatetime"]
 	path = jdatetime
-	url = git@github.com:mback2k/django-jdatetime.git
+	url = https://github.com/mback2k/django-jdatetime.git
