--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-Django==1.5.1
-South==0.7.6
-beautifulsoup4==4.1.3
-celery==3.0.19
+Django==1.6.2
+South==0.8.4
+beautifulsoup4==4.3.2
+celery==3.1.10
 django-appengine-auth==0.1.1dev
-django-celery==3.0.17
+django-celery==3.1.10
+django-celery-model==0.0.1dev
 django-compressor==1.3
-django-redis==3.2
-django-social-auth==0.7.23
+django-redis==3.6.1
+django-social-auth==0.7.28
 google-api-python-client==1.1
 isodate==0.4.9
 python-hcalendar==0.1.1dev
-pytz==2013b
+pytz==2014.2
