--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Django==1.6.2
+Django==1.6.5
 South==0.8.4
 beautifulsoup4==4.3.2
-celery==3.1.11
+celery==3.1.12
 django-appengine-auth==0.1.1dev
 django-celery==3.1.10
 django-celery-model==0.0.3dev
-django-compressor==1.3
-django-redis==3.6.1
+django-compressor==1.4
+django-redis==3.6.2
 django-social-auth==0.7.28
 google-api-python-client==1.1
 isodate==0.4.9
 python-hcalendar==0.1.1dev
-pytz==2014.2
+pytz
