--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-compressor==1.4
 django-redis==3.6.2
 django-social-auth==0.7.28
 google-api-python-client==1.1
-isodate==0.4.9
+isodate==0.5.0
+python-dateutil==2.2
 python-hcalendar==0.1.1dev
 pytz
