--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-Django==1.6.5
-South==0.8.4
-beautifulsoup4==4.3.2
-celery==3.1.12
+Django==1.6.7
+South==1.0
+celery==3.1.14
 django-appengine-auth==0.1.1dev
 django-celery==3.1.10
 django-celery-model==0.0.3dev
-django-compressor==1.4
-django-redis==3.6.2
+django_compressor==1.4
+django-redis==3.7.1
 django-social-auth==0.7.28
-google-api-python-client==1.1
-isodate==0.5.0
+google-api-python-client==1.2
 python-dateutil==2.2
-python-hcalendar==0.1.1dev
+python-hcalendar==0.1.3dev
 pytz
