--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==1.7.3
 celery==3.1.17
 SwampDragon==0.3.8.2
 SwampDragon-auth==0.1.2
-django-appengine-auth==0.1.3dev
+django-appengine-auth==1.0
 django-celery==3.1.16
 django-celery-model==0.0.3dev
 django_compressor==1.4
