--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.7.3
+Django==1.7.7
 celery==3.1.17
 SwampDragon==0.3.8.2
 SwampDragon-auth==0.1.2
@@ -6,9 +6,9 @@ django-appengine-auth==1.0
 django-celery==3.1.16
 django-celery-model==0.0.3dev
 django_compressor==1.4
-django-redis==3.8.1
+django-redis==3.8.3
 django-social-auth==0.7.28
-google-api-python-client==1.3.1
-python-dateutil==2.4.0
-python-hcalendar==0.1.3dev
+google-api-python-client==1.4.0
+python-dateutil==2.4.2
+python-hcalendar==0.2
 pytz
