--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ SwampDragon==0.4.1.2
 SwampDragon-auth==0.1.3
 django-appengine-auth==1.0
 django-celery==3.1.16
-django-celery-model==0.0.3dev
+django-celery-model==0.1
 django_compressor==1.4
 django-redis==3.8.3
 django-social-auth==0.7.28
