--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,51 @@
+migrate:
+  build: .
+  links:
+   - db
+   - redis
+  volumes:
+   - .:/usr/src/app
+  command: /usr/src/env/bin/python manage.py migrate
+loaddata:
+  build: .
+  links:
+   - db
+   - redis
+  volumes:
+   - .:/usr/src/app
+  command: /usr/src/env/bin/python manage.py loaddata docker-fixture.json
 web:
   build: .
   links:
    - db
    - redis
+   - migrate
+   - loaddata
   ports:
    - "8000:8000"
   volumes:
    - .:/usr/src/app
-  command: sh -c "sleep 3s &&
-           /usr/src/env/bin/python manage.py migrate &&
-           /usr/src/env/bin/python manage.py runserver 0.0.0.0:8000"
+  command: /usr/src/env/bin/python manage.py runserver 0.0.0.0:8000
 dragon:
   build: .
   links:
    - db
    - redis
+   - web
   ports:
    - "9999:9999"
   volumes:
    - .:/usr/src/app
-  command: sh -c "sleep 6s &&
-           /usr/src/env/bin/python manage.py runsd 0.0.0.0:9999"
+  command: /usr/src/env/bin/python manage.py runsd 0.0.0.0:9999
 celery:
   build: .
   links:
    - db
    - redis
+   - web
   volumes:
    - .:/usr/src/app
-  command: sh -c "sleep 9s &&
-           /usr/src/env/bin/python manage.py celeryd -B -E -c 2"
+  command: /usr/src/env/bin/python manage.py celeryd -B -E -c 2
 db:
   image: mysql
   environment:
