Fix template not being updated without additional page hit
Add required dependency django-transaction-hooks

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.8.11
 celery==3.1.21
 https://github.com/jonashagstedt/swampdragon/archive/0.4.3.zip
 SwampDragon-auth==0.1.3
+django-transaction-hooks==0.2
 django-celery==3.1.17
 django-celery-model==0.1.1
 django_compressor==1.6
