--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-Django==1.8.16
-celery==3.1.24
-# SwampDragon>=0.4.2
-SwampDragon-auth==0.1.3
-django-celery==3.1.17
-django-celery-model==0.1.2
+Django==1.8.17
+celery[redis]==4.0.2
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
+django-celery-model==0.1.3
 django_compressor==2.1
 django-redis==4.6.0
 google-api-python-client==1.5.5
@@ -12,6 +11,7 @@ python-appengine-auth==0.1.dev0
 python-dateutil==2.6.0
 python-hcalendar==0.2.1
 pytz
-
+# SwampDragon>=0.4.2
 # SwampDragon 0.4.3 (9 Sep 2015)
 https://github.com/jonashagstedt/swampdragon/archive/ebff57a2f2115be48ad759b9963680c538854470.zip
+SwampDragon-auth==0.1.3
