--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-Django==1.8.17
-celery[redis]==4.0.2
-django-celery-beat==1.0.1
-django-celery-results==1.0.1
+Django==1.11.18
+celery[redis]==4.2.1
+django-celery-beat==1.4.0
+django-celery-results==1.0.4
 django-celery-model==0.1.3
-django_compressor==2.1
-django-redis==4.6.0
-google-api-python-client==1.5.5
-python-social-auth==0.2.21
+django_compressor==2.2
+django-redis==4.10.0
+google-api-python-client==1.7.7
+social-auth-core[openidconnect]==2.0.0
+social-auth-app-django==3.1.0
 python-appengine-auth==0.1.dev0
-python-dateutil==2.6.0
+python-dateutil==2.7.5
 python-hcalendar==0.2.1
+oauth2client==4.1.3
 pytz
 # SwampDragon>=0.4.2
 # SwampDragon 0.4.3 (9 Sep 2015)
