--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "jdatetime"]
 	path = webgcal/libs/jdatetime
 	url = https://github.com/mback2k/django-lib-jdatetime.git
-[submodule "swampdragon-live"]
-	path = swampdragon-live
-	url = https://github.com/mback2k/swampdragon-live.git
+[submodule "django-live-templates"]
+	path = django-live-templates
+	url = https://github.com/mback2k/django-live-templates.git
