--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==1.11.18
+channels==2.1.6
+channels_redis==2.3.2
 celery[redis]==4.2.1
 django-celery-beat==1.4.0
 django-celery-results==1.0.4
@@ -12,8 +14,6 @@ python-appengine-auth==0.1.dev0
 python-dateutil==2.7.5
 python-hcalendar==0.2.1
 oauth2client==4.1.3
+uvicorn
+whitenoise
 pytz
-# SwampDragon>=0.4.2
-# SwampDragon 0.4.3 (9 Sep 2015)
-https://github.com/jonashagstedt/swampdragon/archive/ebff57a2f2115be48ad759b9963680c538854470.zip
-SwampDragon-auth==0.1.3
