--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
   - "3.5"
-  - "pypy"
+  - "3.6"
+  - "3.7"
 services:
   - redis-server
 # command to install dependencies
@@ -20,4 +19,4 @@ script:
 # command to run after tests
 after_script:
   - "coverage report -m"
-  - "pylint --py3k webgcal"
+  - "pylint webgcal"
