--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,49 @@
 -i https://pypi.org/simple
 aioredis==1.2.0
-amqp==2.4.0
+amqp==2.4.2
 asgiref==2.3.2
 asn1crypto==0.24.0
 async-timeout==3.0.1
-attrs==18.2.0
-autobahn==19.1.1
+attrs==19.1.0
+autobahn==19.3.3
 automat==0.7.0
 beautifulsoup4==4.7.1
 billiard==3.5.0.5
 cachetools==3.1.0
 celery[redis]==4.2.1
-certifi==2018.11.29
-cffi==1.11.5
+certifi==2019.3.9
+cffi==1.12.2
 channels-redis[cryptography]==2.3.2
 channels==2.1.7
 chardet==3.0.4
 click==7.0
 constantly==15.1.0
-cryptography==2.5
+cryptography==2.6.1
 daphne==2.2.5
 defusedxml==0.5.0 ; python_version >= '3.0'
-django-appconf==1.0.2
+django-appconf==1.0.3
 django-celery-beat==1.4.0
 django-celery-model==0.2
 django-celery-results==1.0.4
 django-compressor==2.2
 django-redis==4.10.0
 django-timezone-field==3.0
-django==1.11.18
+django==1.11.20
 ecdsa==0.13
 future==0.17.1
 google-api-python-client==1.7.7
 google-auth-httplib2==0.0.3
-google-auth==1.6.2
+google-auth==1.6.3
 gunicorn==19.9.0
 h11==0.8.1
 hiredis==1.0.0
-httplib2==0.12.0
-httptools==0.0.11
+httplib2==0.12.1
+httptools==0.0.13
 hyperlink==18.0.0
 idna==2.8
 incremental==17.5.0
 isodate==0.6.0
-kombu==4.2.2.post1
+kombu==4.4.0
 msgpack==0.5.6
 oauth2client==4.1.3
 oauthlib==3.0.1
@@ -61,7 +61,7 @@ python-social-auth==0.3.6
 python3-openid==3.1.0 ; python_version >= '3.0'
 pytz==2018.9
 rcssmin==1.0.6
-redis==3.1.0
+redis==3.2.1
 requests-oauthlib==1.2.0
 requests==2.21.0
 rjsmin==1.0.12
@@ -69,14 +69,14 @@ rsa==4.0
 six==1.12.0
 social-auth-app-django==3.1.0
 social-auth-core[openidconnect]==2.0.0
-soupsieve==1.7.3
+soupsieve==1.9
 twisted==18.9.0
 txaio==18.8.1
 uritemplate==3.0.0
 urllib3==1.24.1
-uvicorn==0.4.1
-uvloop==0.12.0
-vine==1.2.0
+uvicorn==0.6.1
+uvloop==0.12.2
+vine==1.3.0
 websockets==7.0
 whitenoise==4.1.2
 zope.interface==4.6.0
